# learning_ncurses

./: README.md
p1/: a.out  dev_journal.md  print_pun.c  pun
p10/: CMakeLists.txt
p10/src/: main.c
p11/: CMakeLists.txt
p11/src/: main.c
p12/: CMakeLists.txt
p12/src/: main.c
p13/: CMakeLists.txt
p13/src/: main.c
p14/: CMakeLists.txt
p14/src/: main.c
p15/: CMakeLists.txt
p15/src/: main.c
p16/: CMakeLists.txt
p16/src/: main.c
p17/: CMakeLists.txt
p17/src/: main.c
p18/: CMakeLists.txt
p18/src/: main.c
p19/: CMakeLists.txt
p19/src/: main.c
p2/: compile_commands.json
p2/.cache/clangd/index/: engine.c.F8AF36C70F254AFA.idx  main.c.2F49B490EB30C52D.idx  rogue.h.68D7DE7734F0B815.idx  room.c.15301E00B905A714.idx
p2/src/: map.c  player.c  room.c
p20/: CMakeLists.txt
p20/src/: main.c
p21/src/: main.c
p22/: CMakeLists.txt
p22/src/: main.c
p23/: CMakeLists.txt
p23/files/: example.txt
p23/src/: main.c
p24/: CMakeLists.txt
p24/src/: main.c
p25/: CMakeLists.txt
p25/files/: todo.txt
p25/src/: main.c
p26/: CMakeLists.cmake
p26/src/: main.c
p27/: CMakeLists.txt
p27/include/: window.h
p27/src/: window.c
p28/: CMakeLists.txt
p28/src/: main.c
p2_/: CMakeLists.txt  dev_journal.md
p2_/.cache/clangd/index/: draw.c.06E6D9908A3AA575.idx  map.c.A36D85A3158D936F.idx  player.c.0FF052CD0C678D8E.idx
p2_/include/: rogue.h
p2_/src/: draw.c  engine.c  fov.c  main.c
p3/project1/: a.out  main.c
p3/project2/: a.out
p3/project4/: a.out  main.c
p3/project5/: bar_code  dev_journal.md
p3_/project2/: main.c
p4/: CMakeLists.txt
p4/src/: main.c
p5/: CMakeLists.txt
p5/src/: main.c
p6/: CMakeLists.txt
p6/src/: main.c
p7/: CMakeLists.txt
p7/src/: main.c
p8/: CMakeLists.txt
p8/src/: main.c
p9/: CMakeLists.txt
p9/src/: main.c
t1/src/: main.c
t2/: CMakeLists.txt
t2/src/: main.c
t3/: CMakeLists.txt
t3/src/: main.c
t4/: CMakeLists.txt
t4/src/: main.c
t5/src/: main.c
t6/: CMakeLists.txt
t6/src/: main.c
